[FRONT-END] homepage mobile view fix, removed scrollbar

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,14 +5,20 @@
   box-sizing: border-box;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   width: auto;
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   display: flex;
   justify-content: center;
   /* align-items: center; */
   height: 100%; 
   margin: 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .main {
@@ -20,27 +26,27 @@ body {
   flex-direction: column;
   /* align-items: center; */
   justify-content: center;
-  width: 80%;
+  /* width: 80%; */
   text-align: left;
 }
 
 .header {
   display: flex;
-  justify-content: flex-start; 
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
   width: 100%;
 }
 
 .logo-container {
   display: flex;
-  align-items: center; 
+  align-items: center;
+  justify-content: center;
+  margin-left: 3rem;
 }
 
 .logo-img{
-  height: auto;
   width: 150px;
-  margin-top: 25%;
-  left: 0;
-  margin-left: 40%
 }
 
 .home-container {
@@ -50,9 +56,9 @@ body {
   align-items: center;
   width: 100%;
   height: 100vh;
-  margin: auto;
+  /* margin: auto; */
   flex-wrap: wrap;
-  min-height: 90vh;
+  /* min-height: 90vh; */
   font-family: 'Poppins';
 }
 
@@ -76,7 +82,7 @@ body {
   color: rgb(0, 255, 187);  /* Adjust color as needed poop*/
 }
 
-.scroll-down {
+.scroll-down {  
   margin-top: 10rem;
   display: block;
   text-align: center;
@@ -105,8 +111,6 @@ body {
         opacity: 0;
   }
 }
-
-
 
 .mission-statement {
   font-family: 'Poppins';
@@ -194,12 +198,9 @@ body {
 }
 
 .auth-buttons-container {
-  position: absolute;
-  right: 0;
-  top: 0;
-  margin-right: 5%;
-  margin-top: 45px;
-  
+  margin-right: 3rem;
+  display: flex;
+  align-items: center;
 }
 
 .log-in-button,
@@ -212,7 +213,6 @@ body {
   border: none;
   cursor: pointer;
   font-size: 1rem;
-
 }
 
 .log-in-button:hover{
@@ -337,6 +337,97 @@ body {
   }
 
   .get-started-button, .learn-more-button{
+    font-size: 20px;
+  }
+}
+
+@media(max-width: 750px){
+  .home-content{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .home-container{
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+  }
+
+  .header{
+    align-items: center;
+    justify-content: center;
+  }
+
+  .statue-img{
+    max-width: 190px;
+  }
+
+  .slogan {
+    font-size: 3rem;
+    text-align: center;
+  }
+
+  .slogan-container{
+    line-height: 3.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .mission-statement{
+    font-size: 17px;
+    text-align: center;
+  }
+
+  .scroll-down{
+    margin-top: 2rem;
+  }
+
+  .home-block-1{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .home-block-2{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .features-img{
+    display: none;
+  }
+
+  .step-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .learn-more-ai-img{
+    width: 15rem;
+    margin-top: 1rem;
+  }
+
+  .squiggle-img{
+    display: none;
+  }
+
+  .text-container {
+    margin: 0;
+  }
+
+  .button-container{
+    justify-content: center;
+  }
+
+  .step-container button{
+    margin-left: 0;
+    width: 100%;
+  }
+
+  .footer button{
     font-size: 20px;
   }
 }
